# genenote

./: .gitignore  README.md  pyproject.toml  todo.json  zoo-project.json
docs/raw/: 001__coordinates.txt  002__genenote-spec.json
src/genenote/: __init__.py  __main__.py  app.py  cli.py  nodebrowser.py  projectio.py  windows.py
tests/: test_projectio.py  test_tk_smoke.py  test_windows.py
