[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "genenote"
version = "0.1.0"
description = "Creative genealogy notebook with a node canvas and filesystem-backed nodes."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "CC0-1.0" }
authors = [
  { name = "Lion Kimbro" }
]
dependencies = [
  "lionscliapp",
  "tkinterdnd2",
]

[project.scripts]
genenote = "genenote.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
genenote = ["assets/icon/favicon.ico"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
